...
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/make_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
...
            app:placeholderText="Model"
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    c
...
            app:placeholderText="$0.00"
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estimated_value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789." />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="Date Of Purchase"
            app:placeholderText="MM/DD/YYYY"
            android:layout_weight="1"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_purchase_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_weight="1"
            android:hint="Description"
            app:expandedHintEnabled="false"
            app:placeholderText="Description...">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_camera_alt_24"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

...
            app:placeholderText="Add multiple tags (comma-separated)"
            android:layout_weight="1"
            android:hint="Tags"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tag_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Upload Image Button (centered)-->
...
        <View
            android:id="@+id/delete_button_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:backgroundTint="@color/primary_bronze"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Item"
            android:backgroundTint="@color/primary_bronze"
            android:textColor="@color/black"
            />
...
